crates/zizmor/tests/integration/snapshots/integration__e2e__issue_612_repro.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().input(input_under_test(\"issue-612-repro/action.yml\")).run()?"
---
No findings to report. Good job! (2 ignored)
