crates/zizmor/tests/integration/snapshots/integration__e2e__warn_on_min_severity_unknown.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().expects_failure(false).output(OutputMode::Stderr).setenv(\"RUST_LOG\",\n\"warn\").args([\"--min-severity=unknown\"]).input(input_under_test(\"e2e-menagerie\")).run()?"
---
🌈 zizmor v@@VERSION@@
 WARN zizmor: `unknown` is a deprecated minimum severity that has no effect
 WARN zizmor: future versions of zizmor will reject this value
